src/objects/CatalogoConceptos__c.object
<CustomObject>
    <fields>
        <fullName>Activa__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ejemplo__c</fullName>
        <label>Ejemplo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MX_WB_ClasificacionErrorNoVenta__c</fullName>
        <label>Clasificacion de error no venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>ENF</fullName>
                </value>
                <value>
                    <fullName>Selecciona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_ClasificacionErrorVenta__c</fullName>
        <label>Clasificación de error venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EF</fullName>
                </value>
                <value>
                    <fullName>ENF</fullName>
                </value>
                <value>
                    <fullName>Selecciona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Ponderacion__c</fullName>
        <label>Ponderación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WB_PuntosEntrenamiento__c</fullName>
        <label>Puntos de entrenamiento</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NoConcepto__c</fullName>
        <label>Número de Concepto</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Catálogo Conceptos</label>
    <nameField>
        <displayFormat>CC-{000000000}</displayFormat>
        <label>Número de Concepto</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catálogo Conceptos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>